--- a/.jscsrc
+++ b/.jscsrc
@@ -2,6 +2,7 @@
 "preset": "airbnb",
 "requireMultipleVarDecl": null,
 "validateQuoteMarks": true,
-"disallowMultipleVarDecl": true
+"disallowMultipleVarDecl": true,
+"disallowQuotedKeysInObjects": "allButReserved"
 }
 
